# atr_trader

./: .gitignore  AGENTS.md  NEXT.md  NEXT_LIVE_TRADING.md  README.md  README_DEBUG.md  oc  pyproject.toml  research_results.json  run_live.py  session-ses_2733.md
.beads/: issues.jsonl  metadata.json
algo-trading-bot/: pyproject.toml
algo-trading-bot/config/: base.yaml
algo-trading-bot/src/: __init__.py
algo-trading-bot/src/adapters/: __init__.py
algo-trading-bot/src/backtest/: __init__.py
algo-trading-bot/src/core/: __init__.py
algo-trading-bot/src/ml/: __init__.py
algo-trading-bot/src/strategies/: __init__.py
algo-trading-bot/src/utils/: __init__.py  config.py  logging.py
config/: base.yaml
examples/: __init__.py  diagnostic_backtest.py  extended_research.py  ml_backtest.py  quick_backtest.py  research.py
pypsik-live/: Cargo.toml
pypsik-live/src/: main.rs
pypsik-live/src/exchange/: auth.rs  client.rs  mod.rs  order_manager.rs  slippage_guard.rs
pypsik-live/src/live/: candle_feed.rs  daily_feed.rs  mod.rs  pairs_trader.rs  pnl_tracker.rs  state_manager.rs  trader.rs
pypsik-live/src/models/: candle.rs  mod.rs  pair.rs  position.rs  signal.rs
pypsik-live/src/risk/: drawdown_budget.rs  mod.rs  pre_trade_filter.rs  regime_detector.rs
pypsik-live/src/strategy/: enhanced_signals.rs  mod.rs  pairs_strategy.rs
results/: 2026-04-19-filter-optimization.md  2026-04-19-h1-model-bybit-backtest.md  2026-04-19-h1-model-integration.md  2026-04-19-h1-model-real-backtest.md  30day_backtest_2026-04-19.md  60day_final_analysis_2026-04-19.md  balanced_30day_1m_2026-04-19.md  balanced_5day_1m_2026-04-19.md  balanced_60day_2026-04-19.md  balanced_60day_2026-04-20.md  h1_backtest_BTCUSDT_20260419_022912.json  h1_backtest_bybit_BTCUSDT_20260419_030049.json  hybrid_30day_2026-04-19.md  improvement_comparison_2026-04-19.md  kelly_criterion_2026-04-19.md  meta_label_backtest_2026-04-19.md  multi_asset_120day_2026-04-19.md  multi_asset_120day_2026-04-20.md  regime_backtest_2026-04-19.md  relaxed_60day_5m_2026-04-19.md  threshold_sweep_2026-04-19.md  trailing_stop_optimization_2026-04-19.md  zero_dd_comparison_2026-04-21.md  zero_dd_comparison_2026-04-22.md
scripts/: test_geometric_sizing.py  test_volatility_adaptive_stops.py  test_volatility_forecast.py
scripts/backtest/: adaptive_sizing_comparison.py  adaptive_threshold_sweep.py  analyze_backtest.py  analyze_returns.py  balanced_30day_1m_backtest.py  balanced_60day_backtest.py  best_8assets_90d.py  cointegration_screener.py  confirm_bug.py  correlation_monitor_comparison.py  debug_30day.py  debug_backtest.py  debug_drawdown.py  debug_winrate.py  enhanced_8assets_90d.py  enhanced_pairs_backtest.py  enhanced_signals_90d.py  generate_pl_charts.py  h1_30day_backtest.py  h1_quick_test.py  h1_real_backtest.py  kelly_backtest.py  meta_label_backtest.py  multi_asset_backtest.py  optimized_60day_backtest.py  pairs_portfolio_backtest.py  pairs_trading_backtest.py  regime_backtest.py  relaxed_60day_5m_backtest.py  relaxed_60day_backtest.py  (+5 more)
src/: __init__.py  trading_system.py
tests/: test_risk_smoke.py
(+94 files in other folders)
