[project]
name = "algo-trading-bot"
version = "0.1.0"
description = "Crypto algo trading bot with WebSocket market data, multi-strategy framework, backtesting, and neural net signal enhancement"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12.0",
    "aiohttp>=3.9.0",
    "sqlite-utils>=3.35",
    "numpy>=1.26.0",
    "scipy>=1.17.0",
    "pandas>=2.1.0",
    "torch>=2.1.0",
    "ta-lib>=0.4.28",
    "pyyaml>=6.0",
    "pydantic>=2.5.0",
    "structlog>=24.0.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.19.0",
    "ccxt>=4.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
