[package]
name = "pypsik-live"
version = "0.1.0"
edition = "2021"
description = "PyPSiK live trading engine — Rust implementation"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client (rustls — no system OpenSSL dependency)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Structured logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
form_urlencoded = "1"

# SQLite
rusqlite = { version = "0.34", features = ["bundled"] }

# Crypto (HMAC-SHA256 for Bybit auth)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4"] }

# Misc
thiserror = "2"
